--- a/modelo_copin/abstract.tex
+++ b/modelo_copin/abstract.tex
@@ -1,4 +1,6 @@
 %!TEX root = main_mestrado.tex
-Social Question and answer (Q\&A) sites are known as simple and reliable knowledge databases. Sites from the StackExchange platform presently stand out as some of the largest and most social Q\&A spaces, particularly the sites related to STEM. As in some other collaborative online communities, women are underrepresented in StackExchange, hindering its sites from contemplating more diverse views in their content creation process. This work investigates whether women who engage with sites from StackExchange are influenced to contribute less and to leave the community.  For that, we examine gender differences in the number of contributions made to the sites, the time spent contributing, and on the evaluation of quality that the community provides for posted content. Our results point that in the greater part of sites, women contributors contribute as much, with similar quality, and for a similar period as men. When difference do occur, it happens most often that women tend to contribute more than men. 
+Social Question and answer (Q\&A) sites are known as simple and reliable knowledge databases. Sites from the StackExchange platform presently stand out as some of the largest and most social Q\&A spaces, particularly the sites related to STEM. As in some other collaborative online communities, women are underrepresented in StackExchange platform, hindering its sites from contemplating more diverse views in their content creation process. This work investigates whether women who are engaged with sites from StackExchange are influenced to contribute less and to leave the community.  For that, we examined gender differences in the number of contributions made to the sites, the time spent contributing, and on the evaluation of quality that the community provides for posted content. Our results point that, in the greater part of sites, women contributors contribute as much as men, with similar quality and for a similar period. When difference do occur, it happens most often that women tend to contribute more than men. 
 % This happens however less often among STEM sites, which are also the largest in the platform. 
-Nevertheless, we also find that the proportion of contributions coming from women in the STEM sites of StackExchange is increasing for several of the sites. These results point to a richer picture of female contribution in those sites, and raise several implications for future research, as well as to site administrators.  
+Nevertheless, we found that the proportion of contributions coming from women in the STEM sites of StackExchange is increasing in several sites. These results point to a richer picture of female contribution in those sites, and raise several implications for future research, as well as to site administrators.  
+
+% TODO: palavras chaves também
