--- a/modelo_copin/revisao.tex
+++ b/modelo_copin/revisao.tex
@@ -1,42 +1,40 @@
 %!TEX root = main_mestrado.tex
 \chapter{Literatura}
 
-Baseado na psicologia dos gêneros, encontramos duas teorias principais para justificar a ausência de mulheres em campos relacionados à tecnologia: a essencialista que vê as causas na biologia e o constructo social que vê as causas no meio, o qual é considerado "male-friendly" mas não "female-friendly". Contudo, ainda é importante levar em consideração as diferenças individuais destas pessoas ao estudar esse gender gap~\cite{trauth2004understanding}.
+Baseado na psicologia dos gêneros, encontramos duas teorias principais para justificar a ausência de mulheres em campos relacionados à tecnologia: a Essencialista que vê as causas na biologia e o Constructo Social que vê as causas no meio, o qual é considerado \emph{male-friendly} mas não \emph{female-friendly}. Contudo, ainda é importante levar em consideração as diferenças individuais destas pessoas ao estudar esse \emph{gender gap}~\cite{trauth2004understanding}.
+%TODO colocar tradução de male friendly e female friendly
 
-Nesta pesquisa estamos estudando gênero como fator social, como as pessoas se identificam, e não biológico, portanto usaremos o termo "gênero" ao invés de "sexo". Também estamos generalizando e estudando apenas os dois estremos do espectro: aqueles usuários que se identificam como homens e os que se identificam como mulheres. 
+Nesta pesquisa estudamos gênero como fator social, como as pessoas se identificam, e não como fator biológico, portanto usaremos o termo "gênero" ao invés de "sexo". Também generalizamos e estudamos apenas os dois extremos do espectro: aqueles usuários que se identificam como homens e os que se identificam como mulheres. 
 
 \section{Diferenças de gênero em comunidades online}
 
 O comportamento de homens e mulheres em comunidades online nem sempre é o mesmo. Podemos observar diferenças até quanto ao uso da própria internet~\cite{hargittai2006differences} e a linguagem usada online. Esta última podendo influenciar na visão que cada gênero tem  de quão relevante e útil é o conteúdo da comunidade. Em outras palavras, a percepção de qualidade da comunidade~\cite{Gefen:2005:YSS:1066149.1066156}.
 
-Em ambientes de aprendizado online, homens interagem mais com o ambiente e enviam mensagens mais longas, com um contexto mais social, do que as mulheres. Estas tendem a ter uma participação mais pontual e relacionada com o tema das aulas~\cite{barrett1999gender}. Já na Wikipedia, apesar de homens e mulheres terem comportamentos de contribuição similares, as mulheres são as que produzem contribuições mais longas~\cite{glott2010wikipedia}.
+Em ambientes de aprendizado online, homens interagem mais com o ambiente e enviam mensagens mais longas, com um contexto mais social, do que as mulheres. Estas tendem a ter uma participação mais pontual e relacionada com o tema das aulas~\cite{barrett1999gender}. Já na \emph{Wikipedia}, apesar de homens e mulheres terem comportamentos de contribuição similares, as mulheres são as que produzem contribuições mais longas~\cite{glott2010wikipedia}.
 
-Mudando o foco para comunidades online mais relacionadas à tecnologia, foi encontrado que, em canais de IRC sobre diversos assuntos, usuários que apresentam um pseudônimo feminino tendem a receber 25 vezes mais mensagens maliciosas que usuários com pseudônimo masculinos e 4 vezes mais que usuários com pseudônimo que não se identificava o gênero~\cite{meyer2006assessing}. Isto pode ser um dos motivos pelo qual mulheres não participam tanto quanto homens deste tipo de comunidade. Contudo, observou-se também que comunidades que foram desenhadas para homens e que são conhecidas por não serem \textit{female-friendly} e serem cenário de inúmeros casos de perseguição às mulheres, como as comunidades MMORPG, registraram um crescimento na proporção de mulheres participantes, este número chegando até a ser maior que o de homens~\cite{taylor2003multiple}. 
+Mudando o foco para comunidades online mais relacionadas à tecnologia, foi encontrado que, em canais de \emph{IRC} sobre diversos assuntos, usuários que apresentam um pseudônimo feminino tendem a receber 25 vezes mais mensagens maliciosas que usuários com pseudônimo masculinos e 4 vezes mais que usuários com pseudônimos que não se identificava o gênero~\cite{meyer2006assessing}. Isto pode ser um dos motivos pelo qual mulheres não participam tanto quanto homens deste tipo de comunidade. Contudo, observou-se também que comunidades que foram desenhadas para homens e que são conhecidas por não serem \textit{female-friendly} e serem cenário de inúmeros casos de perseguição às mulheres, como as comunidades \emph{MMORPG}, registraram um crescimento na proporção de mulheres participantes, este número chegando até a ser maior que o de homens~\cite{taylor2003multiple}. 
 
-Por fim, em comunidades \textit{Free Open Source} (FOSS) e na comunidade StackOverflow mulheres não são uma minoria, mas possuem uma baixa participação~\cite{rustad2011suck} e se engajam menos à comunidade~\cite{Vasilescu27092013}. Homens têm um tempo de vida maior nestas comunidades.
+Por fim, em comunidades \textit{Free Open Source} (\emph{FOSS}) e na comunidade \emph{StackOverflow} mulheres não são uma minoria, mas possuem uma baixa participação~\cite{rustad2011suck} e se engajam menos à comunidade~\cite{Vasilescu27092013}. Homens têm um tempo de vida maior nestas comunidades.
 
 Portanto, não podemos generalizar o comportamento de mulheres para todas as comunidades online, mesmo que elas tenham designs similares e propósitos iguais. E, como todas as comunidades podem se beneficiar de usuários mais diversos, é importante estudar o comportamento de cada uma para ser possível sugerir soluções para o problema do \textit{gender gap}.
 
-% TODO:
-% Though we can't generalize women's behavior for every online community, even if they have similar shapes or similar purposes. And, as everyone of these communities can improve as their user diversity widen, it's important to study women's behavior in each one so we can make suggestions to solve its gender gap.
-
 \section{Feedback e competitividade}
 
-Feedback mostra-se como uma ferramenta que influi bastante no comportamento dos usuários em comunidades online. Sabe-se que feedback negativo pode trazer um efeito indesejado à comunidade, fazendo com os que o recebem mantenham-se ativos e produzindo conteúdo de baixa qualidade~\cite{cheng2014community}. O estudo mostra também que o efeito é viral: pessoas que recebem feedback negativo tendem a passá-lo para frente. Em contra partida, na Wikipedia, acredita-se feedbacks positivos são um fator importante na motivação de mulheres a participar da comunidade visto que este aumenta a auto-estima delas quanto ao seu conhecimento no assunto da contribuição~\cite{collier2012conflict}.
+Feedback mostra-se como uma ferramenta que influi bastante no comportamento dos usuários em comunidades online. Sabe-se que feedback negativo pode trazer um efeito indesejado à comunidade, fazendo com os que o recebem mantenham-se ativos e produzindo conteúdo de baixa qualidade~\cite{cheng2014community}. O estudo mostra também que o efeito é viral: pessoas que recebem feedback negativo tendem a passá-lo para frente. Em contra partida, na \emph{Wikipedia}, acredita-se que feedbacks positivos são um fator importante na motivação de mulheres a participar da comunidade visto que este aumenta a auto-estima delas quanto ao seu conhecimento no assunto da contribuição~\cite{collier2012conflict}.
 
-Com relação a competitividade, estudos em laboratório mostram que mulheres não são tão eficientes quanto homens em ambientes competitivos, principalmente quando é necessário competir com homens~\cite{gneezy2003performance}. As comunidades do StackExchange podem ser vistas como ambientes competitivos, visto que as respostas passam por um processo seletivo para cada pergunta. É possível que um baixo desempenho das mulheres nestas comunidades possa ser frustrante e levá-las a sair cedo da comunidade. Interessante notar que, enquanto a maioria das mulheres as evitam, homens sentem-se confortáveis em competições~\cite{niederle2005women,croson2009gender}.
+Com relação à competitividade, estudos em laboratório mostram que mulheres não são tão eficientes quanto homens em ambientes competitivos, principalmente quando é necessário competir com homens~\cite{gneezy2003performance}. As comunidades do \emph{StackExchange} podem ser vistas como ambientes competitivos, visto que as respostas passam por um processo seletivo para cada pergunta. É possível que um baixo desempenho das mulheres nestas comunidades possa ser frustrante e levá-las a sair cedo da comunidade. Interessante notar que, enquanto a maioria das mulheres as evitam, homens sentem-se confortáveis em competições~\cite{niederle2005women,croson2009gender}.
 
-\section{Mulheres, STEM e autoconfiança}
+\section{Mulheres, \emph{STEM} e autoconfiança}
 % autoconfiança = confidence.
-Estudos mostram que mulheres têm performance tão boa quanto a de homens em atividades de matemática~\cite{hyde1990gender,campbell1986effects} e que até costumam ter notas melhores em disciplinas relacionadas à STEM~\cite{stoet2015sex}. Mais ainda, já se sabe que a performance das mulheres neste campo não depende de igualdade política, econômica ou social~\cite{stoet2015sex}. E ainda assim, o estereótipo de que mulheres são menos competentes em campos relacionados a STEM é bem visível e documentado~\cite{moss2012science}.
+Estudos mostram que mulheres têm performance tão boa quanto a de homens em atividades de matemática~\cite{hyde1990gender,campbell1986effects} e que até costumam ter notas melhores em disciplinas relacionadas à \emph{STEM}~\cite{stoet2015sex}. Mais ainda, já se sabe que a performance das mulheres neste campo não depende de igualdade política, econômica ou social~\cite{stoet2015sex}. E ainda assim, o estereótipo de que mulheres são menos competentes em campos relacionados a \emph{STEM} é bem visível e documentado~\cite{moss2012science}.
 
-Apesar do seu potencial, mulheres ainda são minoria em campos relacionados a STEM que acredita-se que é necessário um talento inato para poder alcançar o sucesso na área~\cite{leslie2015expectations}. Este é o caso de Ciência da Computação e Filosofia, por exemplo. O motivo para que isto aconteça pode ser a crença por parte de ambos os gêneros que mulheres não possuem tal talento~\cite{tiedemann2000gender,kirkcaldy2007parental}. Apesar de que não foi provado ainda que esse "talento inato" é exclusivo de homens ou mulheres~\cite{hyde2005gender}. Contudo, se mulheres absorverem este estereótipo, elas podem achar que estes campos não são para elas~\cite{wigfield2000expectancy,shapiro2011major}.
+Apesar do seu potencial, mulheres ainda são minoria em campos relacionados a \emph{STEM} que acredita-se que é necessário um talento inato para poder alcançar o sucesso na área~\cite{leslie2015expectations}. Este é o caso de Ciência da Computação e Filosofia, por exemplo. O motivo para que isto aconteça pode ser a crença por parte de ambos os gêneros que mulheres não possuem tal talento~\cite{tiedemann2000gender,kirkcaldy2007parental}. Apesar de que não foi provado ainda que esse "talento inato" é exclusivo de homens ou mulheres~\cite{hyde2005gender}. Contudo, se mulheres absorverem este estereótipo, elas podem achar que estes campos não são para elas~\cite{wigfield2000expectancy,shapiro2011major}.
 
-O problema parece estar na falta de auto confiança por parte das mulheres que tendem a duvidar que possuem tal talento e sentem-se desencorajadas a tentar campos como matemática e filosofia~\cite{leslie2015expectations}. Já foi observado que mulheres realmente possuem baixa auto confiança em tarefas de ciências comparadas aos homens~\cite{fox1992confidence} e que resultados em tarefas de matemática afetam mais mulheres do que homens com relação a sua auto confiança em sua performance~\cite{campbell1986effects}. Esta falta de confiança em seu potencial já chegou até a afetar comunidades como a Wikipedia, onde a maior parte das contribuições vêm de uma minoria de homens~\cite{antin2011gender,lam2011wp}.
+O problema parece estar na falta de auto confiança por parte das mulheres que tendem a duvidar que possuem tal talento e sentem-se desencorajadas a tentar campos como matemática e filosofia~\cite{leslie2015expectations}. Já foi observado que mulheres realmente possuem baixa autoconfiança em tarefas de ciências, se comparadas aos homens~\cite{fox1992confidence} e que resultados em tarefas de matemática afetam mais mulheres do que homens com relação a sua auto confiança em sua performance~\cite{campbell1986effects}. Esta falta de confiança em seu potencial já chegou até a afetar comunidades como a \emph{Wikipedia}, onde a maior parte das contribuições vêm de uma minoria de homens~\cite{antin2011gender,lam2011wp}.
 
-Mais ainda, o número baixo de mulheres em STEM parece influenciar outras mulheres a não se envolver na área: o fato de outras mulheres não escolherem um determinado campo pode ser um sinal de que ele não seja bom para mulheres no geral~\cite{shapiro2011major}. Contudo, mulheres tendem a não seu gênero tão influente quando decidem se querem seguir carreira em Ciência da Computação quanto condições culturais e o ambiente onde irão trabalhar~\cite{blum2007cultural}. Mais ainda, estudos apontam que mulheres que têm contato com modelos em ciência podem mudar a sua postura com relação à disciplina de uma maneira positiva~\cite{smith1986effect}, e isto pode ter um impacto positivo em seus interesses educacionais~\cite{nixon1999educational}.
+Mais ainda, o número baixo de mulheres em \emph{STEM} parece influenciar outras mulheres a não se envolver na área: o fato de outras mulheres não escolherem um determinado campo pode ser um sinal de que ele não seja bom para mulheres no geral~\cite{shapiro2011major}. Contudo, mulheres tendem a não considerar seu gênero tão influente quando decidem se querem seguir carreira em Ciência da Computação quanto condições culturais e o ambiente onde irão trabalhar~\cite{blum2007cultural}. Mais ainda, estudos apontam que mulheres que têm contato com modelos em ciência podem mudar a sua postura com relação à disciplina de uma maneira positiva~\cite{smith1986effect}, e isto pode ter um impacto positivo em seus interesses educacionais~\cite{nixon1999educational}.
 
-% \section{Mulheres e carreiras em STEM}
+% \section{Mulheres e carreiras em \emph{STEM}}
 
 % Mulheres não consideram seu gênero tão influente quando decidem se querem seguir carreira em Ciência da Computação quanto condições culturais e o ambiente onde irão trabalhar~\cite{blum2007cultural}. Mas, uma baixa proporção de mulheres numa disciplina pode mandar uma mensagem negativa para mulheres, como se a disciplina não fosse interessante para as outras e que elas a deveriam evitá-la também~\cite{shapiro2011major}.
 
@@ -46,5 +44,5 @@ Mais ainda, o número baixo de mulheres em STEM parece influenciar outras mulher
 % \bigskip
 
 % TODO: Último parágrafo resumindo tudo. O antigo para me inspirar:
-% Taken together, the literature points that although one should not expect women to have less ability in STEM-related tasks, the environment they live in and how they receive performance feedback seems to be determinant on how women relate to STEM. These same factors seem to play a role in some online communities. Our study contributes to this body of knowledge by investigating how women contribute in STEM Social Q\&A online communities. On the one hand, these are environments closely related to the STEM field. On the other hand, from the perspective of research, gender differences have been little explored in this point of the online communities design space. 
+% Taken together, the literature points that although one should not expect women to have less ability in \emph{STEM}-related tasks, the environment they live in and how they receive performance feedback seems to be determinant on how women relate to \emph{STEM}. These same factors seem to play a role in some online communities. Our study contributes to this body of knowledge by investigating how women contribute in \emph{STEM} Social Q\&A online communities. On the one hand, these are environments closely related to the \emph{STEM} field. On the other hand, from the perspective of research, gender differences have been little explored in this point of the online communities design space. 
 
