--- a/modelo_copin/conclusoes.tex
+++ b/modelo_copin/conclusoes.tex
@@ -3,19 +3,19 @@
 \chapter{Limitações}
 % In spite of the insights given in this paper, this study is not conclusive in itself. For following up on this research, a qualitative enquire seems paramount to deepen the analysis started here. Also, widening the factors related to participation can help put our results in perspective.
 
-Apesar de todas as resoluções às quais chegamos nesta pesquisa, ela não é completa. Uma pesquisa qualitativa soa como um bom começo para complementar as análises que começamos aqui. Mais ainda, adicionar mais fatores relacionados à participação pode ajudar a ampliar a visão que temos da situação.
+Apesar de todas as resoluções as quais chegamos nesta pesquisa, ela não é completa. Uma pesquisa qualitativa soa como um bom começo para complementar as análises que começamos aqui. Outrossim, adicionar mais fatores relacionados à participação pode ajudar a ampliar a visão que temos da situação.
 
 % Regarding gender definition, our samples were limited by the users who identified themselves through names listed in the Global Name Data. This approach likely under represents users from countries whose names are not well represented in name registrations in the UK and US. Future research could also compare the effect of a user disclosing his or her gender through other means, such as an avatar. 
 
-Quanto a inferência de gênero, limitamos nossa amostra àqueles usuários que identificaram a si mesmo com nomes contidos no Global Name Data. Esta abordagem pode ter descartado usuários de outros países cujos nomes não são comuns nos registros de nascimento dos Estados Unidos e Reino Unido. Uma pesquisa futura poderia realizar as mesmas comparações que fizemos, mas utilizando um outro método de identificação de gênero, como a foto do perfil do usuário.
+Quanto à inferência de gênero, limitamos nossa amostra àqueles usuários que identificaram a si mesmo com nomes contidos no \emph{Global Name Data}. Esta abordagem pode ter descartado usuários de outros países cujos nomes não são comuns nos registros de nascimento dos Estados Unidos e Reino Unido. Uma pesquisa futura poderia realizar as mesmas comparações que fizemos, mas utilizando um outro método de identificação de gênero, como a foto do perfil do usuário.
 
 % Although our sample of sites has a significant diversity in themes, all the sites we study are from the StackExchange platform. Contrasting these results with sites that have similar purpose but a different design may help us further understand the interplay between site design, community composition, and behavior. 
 
-Embora nossa amostra contenha sites com uma diversidade significante de temas, todos eles pertencem a uma mesma plataforma: o StackExchange. Comparar nossos resultados com outros sites que tenham um propósito similar, mas um design diferente pode ajudar a entender melhor a relação entre o design do site, a diversidade de gêneros da comunidade e o comportamento de seus usuários.
+Embora nossa amostra contenha sites com uma diversidade significante de temas, todos eles pertencem a uma mesma plataforma: o \emph{StackExchange}. Comparar nossos resultados com outros sites que tenham um propósito similar, mas um design diferente pode ajudar a entender melhor a relação entre o design do site, a diversidade de gêneros da comunidade e o comportamento de seus usuários.
 
 % Finally, our quantitative approach and the dataset used do not allow us to delve into the reasons for several of the differences and similarities found. Qualitative studies that complement our enterprise seem necessary and timely. 
 
-Finalmente, nossa abordagem quantitativa e conjunto de dados usado não nos permite investigar profundamente quanto às razões de várias diferenças e similaridades encontradas. Nos parece necessário e oportuno realizar um estudo qualitativo que complementa nossa iniciativa.
+Finalmente, nossa abordagem quantitativa e conjunto de dados usado não nos permite investigar profundamente quanto às razões de várias diferenças e similaridades encontradas. Nos parece necessário e oportuno realizar um estudo qualitativo que complementasse nossa iniciativa.
 
 \chapter{Conclusões}
 
@@ -25,7 +25,7 @@ Enquanto estudos de gênero em comunidades de perguntas e respostas costumam foc
 
 % Similarly to Wikipedia~\cite{lam2011wp}, women contribute with relevant content in Q\&A sites, but the vast majority of the contributions still comes from men. It is known that a diverse environment can benefit a community, and our study also quantifies that after joining the Q\&A communities we study, women seem to have no barrier for producing valuable content and engaging as much as men with the system. Our study does not focus on investigating why there are sensibly fewer women in StackExchange communities. However, it stresses that not including or motivating women to join can be a wastage of valuable and loyal contributors.
 
-Semelhante à Wikipedia~\cite{lam2011wp}, mulheres contribuem com conteúdo relevante para sites de perguntas e respostas, mas a grande maioria das contribuições ainda vêm de homens. Nosso estudo nos revela que, depois de passar um tempo contribuindo para os sites que estudamos, mulheres parecem encontrar uma barreira para continuar produzindo conteúdo de valia e continuar engajadas tanto quanto os homens. Não é objetivo do nosso estudo investigar porque há tão poucas mulheres dentro destas comunidades, mas saber que ambientes diversos beneficiam o funcionamento e qualidade de uma comunidade, nos leva a concluir que não incluir ou não motivar mulheres a entrar nestas comunidades pode ser um grande desperdício de contribuidores valiosos e fiéis.
+Semelhante à \emph{Wikipedia}~\cite{lam2011wp}, mulheres contribuem com conteúdo relevante para sites de perguntas e respostas, mas a grande maioria das contribuições ainda vêm de homens. Nosso estudo nos revela que, depois de passar um tempo contribuindo para os sites que estudamos, mulheres parecem encontrar uma barreira para continuar produzindo conteúdo de valia e continuar engajadas tanto quanto os homens. Não é objetivo do nosso estudo investigar porque há tão poucas mulheres dentro destas comunidades, mas saber que ambientes diversos beneficiam o funcionamento e qualidade de uma comunidade, nos leva a concluir que não incluir ou não motivar mulheres a entrar nestas comunidades pode ser um grande desperdício de contribuidores valiosos e fiéis.
 
 % An interesting perspective on these results is that the realization of how active participating women are in these communities is a knowledge that can be leveraged to foster women participation there. Women tend to respond well to role models~\cite{smith1986effect, nixon1999educational}, though present women contributors found on these communities may be used as role models to encourage women who are presently lurking. Also, knowing that women can get along on these communities may influence women's perception of how well they can perform, thereafter changing their willing to participate on the community~\cite{ehrlinger2003chronic}.
 
@@ -33,7 +33,7 @@ Um aspecto interessante destes resultados é a percepção de quão ativas mulhe
 
 % In brief, our study results contradict several common beliefs and part of the prior research related to gender, STEM and online Question and Answer communities. This seems like a pertinent reminder that the gender gap is a problem that can appear in many forms and a single solution is not enough. In our case, there seems to exist a barrier to start contributing or display oneself as a women, and sometimes for women to remain engaged. Differently, less effort seems needed to have women contributors participate further while engaged. 
 
-Em resumo, nosso estudo contradiz várias crenças comuns além algumas pesquisas anteriores relacionadas a gêneros, STEM e sites de perguntas e respostas. Isso nos parece como um lembrete pertinente que o problema da disparidade de gênero pode aparecer em várias formas e não existe uma solução única para todas as versões do problema. Em nosso caso, parece que mulheres precisam enfrentar uma barreira para começar a contribuir ou para se identificar como mulher nestas comunidades. E, às vezes, uma barreira até em continuar contribuindo uma vez engajada ao site. Contudo, menos esforço parece ser necessário para manter a contribuição vinda de mulheres já engajadas.
+Em resumo, nosso estudo contradiz várias crenças comuns, além algumas pesquisas anteriores relacionadas a gêneros, \emph{STEM} e sites de perguntas e respostas. Isso nos parece como um reforço pertinente que o problema da disparidade de gênero pode aparecer em várias formas e não existe uma solução única para todas as versões do problema. Em nosso caso, parece que mulheres precisam enfrentar uma barreira para começar a contribuir ou para se identificar como mulher nestas comunidades. E, às vezes, uma barreira até em continuar contribuindo uma vez engajada ao site. Contudo, menos esforço parece ser necessário para manter a contribuição proveniente de mulheres já engajadas.
 
 % Finally, it is important to remark that the knowledge about the precise differences in contribution behavior for men and women should not only lead to reduce disparity on women proportion in Q\&A sites. By allowing for that and increasing their participation on these communities, this should also pave the way for increasing diversity in general, accounting for other minorities.
 
