--- a/modelo_copin/discussao.tex
+++ b/modelo_copin/discussao.tex
@@ -1,42 +1,41 @@
 %!TEX root = main_mestrado.tex
 \chapter{Discussão}
 
-Nossas expectativas ao observar contribuições individuais de usuários de diferentes gêneros era que mulheres, por serem uma minoria, iriam participar menos destes sites, assim como na Wikipedia~\cite{antin2011gender} e comunidades FOSS~\cite{rustad2011suck}. Contudo, o que encontramos não foram diferenças, mas uma grande equivalência entre o comportamento de homens e mulheres nos sites estudados. 
+Nossa expectativa ao observar contribuições individuais de usuários de diferentes gêneros era que mulheres, por serem uma minoria, iriam participar menos destes sites, assim como na \emph{Wikipedia}~\cite{antin2011gender} e comunidades \emph{FOSS}~\cite{rustad2011suck}. Contudo, o que encontramos não foram diferenças, mas uma grande equivalência entre o comportamento de homens e mulheres nos sites estudados. 
 
-No geral, saber que mulheres contribuem de maneira similar aos homens na maioria dos sites aponta que uma mulher que se cadastrar em um site aleatório do StackExchange provavelmente irá encontrar um ambiente que não a estimule a contribuir menos ou menos frequentemente que os homens. Estes resultados aparentam inesperados visto a pequena proporção de mulheres na maioria dos sites.
+No geral, saber que mulheres contribuem de maneira similar aos homens na maioria dos sites aponta que uma mulher que se cadastrar em um site aleatório do \emph{StackExchange} provavelmente irá encontrar um ambiente que não a estimule a contribuir menos ou menos frequentemente que os homens. Estes resultados aparentam inesperados visto a pequena proporção de mulheres na maioria dos sites.
 
 \section{As diferenças}
 
-Tendo em mente todo o estereótipo em STEM que mulheres são enquadradas, esperávamos que sua baixa representatividade também representaria também baixa contribuição. Mais ainda, esperávamos que o estereótipo de mulheres em tecnologia~\cite{hyde1990gender} e aquele em que mulheres não possuem um taleto inato para ciência~\cite{leslie2015expectations} fosse influenciar na opinião que os outros usuários teriam das suas colegas, fazendo com que mulheres recebessem feedback negativo nas suas contribuições, indiscriminadamente, levando o conteúdo das mulheres a serem classificados com menor qualidade pela comunidade. Sem esquecer de que outros estudos já tinham identificado o conteúdo vindo de mulheres como de qualidade inferior comparado ao de homens, tanto em tarefas de matemática~\cite{campbell1986effects} quanto em comunidades online~\cite{collier2012conflict}.
+Tendo em mente todo o estereótipo em \emph{STEM} que mulheres são enquadradas, esperávamos que sua baixa representatividade também representaria baixa contribuição. Ademais, esperávamos que o estereótipo de mulheres em tecnologia~\cite{hyde1990gender} e aquele em que mulheres não possuem um taleto inato para ciência~\cite{leslie2015expectations} fosse influenciar na opinião que os outros usuários teriam das suas colegas, fazendo com que mulheres recebessem feedback negativo nas suas contribuições, indiscriminadamente, levando o conteúdo das mulheres a serem classificados com menor qualidade pela comunidade. Sem esquecer de que outros estudos já tinham identificado o conteúdo vindo de mulheres como de qualidade inferior comparado ao de homens, tanto em tarefas de matemática~\cite{campbell1986effects} quanto em comunidades online~\cite{collier2012conflict}.
 
 Contudo, não é isso que acontece. Na maioria das comunidades, mulheres produzem conteúdo de tão boa qualidade quanto homens, segundo a visão da comunidade. Vemos que estas mulheres contribuem bastante com perguntas e comentários, tendo uma frequência de contribuições muitas vezes maiores que a de homens. 
 
-% Por outro lado, apesar de mulheres respondem mais do que homens em várias comunidades, quando observamos apenas comunidades relacionadas a STEM esta proporção é invertida. Inclusive, mulheres respondem menos nos quatro maiores e mais antigos sites da plataforma: StackOverflow, SuperUser, SeverFault e Mathematics. Mais ainda, em praticamente todas as comunidades que observamos diferença estatística quanto ao tempo de vida, homens passavam mais tempo na comunidade.
+% Por outro lado, apesar de mulheres respondem mais do que homens em várias comunidades, quando observamos apenas comunidades relacionadas a \emph{STEM} esta proporção é invertida. Inclusive, mulheres respondem menos nos quatro maiores e mais antigos sites da plataforma: StackOverflow, SuperUser, SeverFault e Mathematics. Mais ainda, em praticamente todas as comunidades que observamos diferença estatística quanto ao tempo de vida, homens passavam mais tempo na comunidade.
 
 % Quanto ao tempo de vida de mulheres nestas comunidades, nota-se que a diferença de tempo é maior em comunidades mais antigas, vide tabela \ref{table:lifetime}. Isso pode se dar por que tais comunidades, a exemplo do StackOverflow, foram criadas por um grupo de homens e se mantiveram assim por bastante tempo, até se tornarem popular. Este grupo de usuários provavelmente tem um tempo de vida bem maior do que as mulheres que eventualmente ingressaram na comunidade. 
 
-% TODO: Traduzir:
-% On the other hand, although women contribute more answers in several sites, this does not happen in STEM sites. In fact, women contribute significantly less answers in all of the four largest and oldest sites, which are also STEM-related (StackOverflow, SuperUser, ServerFault and Mathematics). If these sites influence women to participate less in their answering process, their magnitude implies many women are presently contributing less answers than they could be. Given that there are examples of sites in other categories where an average woman answers more often than  man, our results suggest a factor specific to some sites -- and likely to their community -- is presently at play. This observation is also complemented by significantly lower lifetimes for women contributors in these sites (Table~\ref{table:lifetime}).
+% On the other hand, although women contribute more answers in several sites, this does not happen in \emph{STEM} sites. In fact, women contribute significantly less answers in all of the four largest and oldest sites, which are also \emph{STEM}-related (StackOverflow, SuperUser, ServerFault and Mathematics). If these sites influence women to participate less in their answering process, their magnitude implies many women are presently contributing less answers than they could be. Given that there are examples of sites in other categories where an average woman answers more often than  man, our results suggest a factor specific to some sites -- and likely to their community -- is presently at play. This observation is also complemented by significantly lower lifetimes for women contributors in these sites (Table~\ref{table:lifetime}).
 
-Por outro lado, apesar de mulheres respondem mais do que homens em várias comunidades, quando observamos apenas comunidades relacionadas a STEM isto não acontece. Mulheres contribuem com menos respostas do que homens em todos os quatro maiores e mais antigos sites da plataforma: StackOverflow, SuperUser, SeverFault e Mathematics. Se estes sites influenciam mulheres a participarem menos no processo de resposta, a gradeza deles pode implicar que um grande número de mulheres estão contribuindo menos respostas do que poderiam estar. Sabendo que existem sites em outras categorias onde mulheres comuns respondem mais do que homens, nossos resultados sugerem que há um fator específico a alguns sites -- e provavelmente à comunidade -- atuando no comportamento das mulheres quanto às suas contribuições. A visível e gritante diferença no tempo de vida entre homens e mulheres nestas comunidades complementa este pensamento (ver Tabela~\ref{table:lifetime}).
+Por outro lado, apesar de mulheres respondem mais do que homens em várias comunidades, quando observamos apenas comunidades relacionadas a \emph{STEM} isto não acontece. Mulheres contribuem com menos respostas do que homens em todos os quatro maiores e mais antigos sites da plataforma: \emph{StackOverflow}, \emph{SuperUser}, \emph{SeverFault} e \emph{Mathematics}. Se estes sites influenciam mulheres a participarem menos no processo de resposta, a grandeza deles pode implicar que um grande número de mulheres estão contribuindo menos respostas do que poderiam estar. Sabendo que existem sites em outras categorias onde mulheres comuns respondem mais do que homens, nossos resultados sugerem que há um fator característico em alguns sites -- e provavelmente à comunidade -- atuando no comportamento das mulheres quanto às suas contribuições. A visível e gritante diferença no tempo de vida entre homens e mulheres nestas comunidades complementa este pensamento (ver Tabela~\ref{table:lifetime}).
 
-% One possible characteristic that links some of the STEM sites in StackExchange is that several of these sites grew out of StackOverflow. If StackOverflow was created by a nucleus of men who set the culture of this site, there may be a set of values and practices more closely shared by STEM sites that grew out of it.
+% One possible characteristic that links some of the \emph{STEM} sites in \emph{StackExchange} is that several of these sites grew out of StackOverflow. If StackOverflow was created by a nucleus of men who set the culture of this site, there may be a set of values and practices more closely shared by \emph{STEM} sites that grew out of it.
 
-Uma característica comum à algumas comunidades relacionadas a STEM do StackExchnage é que elas são ramos do StackOverflow que foi criada por um grupo de homens e se manteve assim por bastante tempo, até se tornar popular. É provável que este grupo de homens tenham sua própria cultura dentro do StackOverflow, com seus valores e práticas que não sejam amigáveis às mulheres, e esta cultura tenha passado para os demais sites, fazendo com que estes sejam sites com características sociais que não atraiam as mulheres.
+Uma característica comum a algumas comunidades relacionadas a \emph{STEM} do \emph{StackExchange} é que elas são ramos do \emph{StackOverflow} que foi criada por um grupo de homens e se manteve assim por bastante tempo, até se tornar popular. É provável que este grupo de homens tenham sua própria cultura dentro do \emph{StackOverflow}, com seus valores e práticas que não sejam amigáveis às mulheres, e esta cultura tenha passado para os demais sites, fazendo com que estes sejam sites com características sociais que não atraiam as mulheres.
 
-Nosso resultado se alinha com o de Yang et al.~\cite{yang2010activity}, que apesar de não estudar a mesma comunidade de perguntas e resposta, encontrou que usuários que têm o tempo de vida maior na comunidade preferem responder à perguntar. No nosso estudo, verificamos que estes usuários são geralmente homens, assim como encontrou Vasilescu et al.~\cite{Vasilescu27092013}. Vasilescu et al considera este resultado insalubre para a comunidade, visto que bons contribuidores estão deixando a comunidade. Nós acreditamos que exista uma barreira para que mulheres continue contribuindo, podendo ser desde a aquisição, por parte delas, do pensamento de que não são capazes de contribuir, até por perseguições/assédios dentro da própria comunidade por parte dos outros usuários. Estas hipóteses, contudo, pedem uma investigação mais detalhada, fora do escopo desta pesquisa.
+Nosso resultado se alinha com o de Yang \textit{et al}.~\cite{yang2010activity}, que apesar de não estudar a mesma comunidade de perguntas e respostas, defendeu que usuários que têm o tempo de vida maior na comunidade preferem responder à perguntar. No nosso estudo, verificamos que estes usuários são geralmente homens, assim como entendeu Vasilescu \textit{et al}.~\cite{Vasilescu27092013}. Vasilescu \textit{et al} considera este resultado insalubre para a comunidade, visto que bons contribuidores estão deixando a comunidade. Nós acreditamos que exista uma barreira para que mulheres continue contribuindo, podendo ser desde a aquisição, por parte delas, do pensamento de que não são capazes de contribuir, até por perseguições/assédios dentro da própria comunidade por parte dos outros usuários. Estas hipóteses, contudo, pedem uma investigação mais detalhada, fora do escopo desta pesquisa.
 
-Apesar de não ser relacionada com sua real performance, a percepção que uma pessoa tem de sua capacidade cognitiva em um campo influencia como esta pessoa acha que se sairá em uma determinada tarefa. Mais ainda, achar que não vai se dar bem em uma tarefa pode fazer com que, caso seja dada a opção, a pessoa não chegue a tentar realizar tal atividade. Mulheres acham que não são boas em tarefas sobre ciência e isso às influencia a não participar do campo~\cite{ehrlinger2003chronic}. Isso pode explicar porque a proporção de mulheres é tão baixa nas comunidades sobre STEM, mas elas se dão tão bem quanto homens na maioria delas.
+Apesar de não ser relacionada com sua real performance, a percepção que uma pessoa tem de sua capacidade cognitiva em um campo influencia como esta pessoa acha que se sairá em uma determinada tarefa. No mais, achar que não vai se dar bem em uma tarefa pode fazer com que, caso seja dada a opção, a pessoa não chegue a tentar realizar tal atividade. Mulheres acham que não são boas em tarefas sobre ciência e isso as influencia a não participar do campo~\cite{ehrlinger2003chronic}. Isso pode explicar porque a proporção de mulheres é tão baixa nas comunidades sobre \emph{STEM}, mas elas se dão tão bem quanto homens na maioria delas.
 
-% Uma justificativa para mulheres responderem menos em comunidades de STEM pode ser a de que respostas podem ser consideradas mais competitivas do que perguntas. Afinal, todas as respostas passam por um "processo seletivo" para ser a melhor resposta de uma determinada pergunta, o que não acontece com perguntas nem comentários. Já se sabe que mulheres não se dão bem em ambientes competitivos, principalmente quando precisam competir com homens~\cite{gneezy2003performance}, e tendem a evitá-los~\cite{niederle2005women,croson2009gender}. Além de que, demonstrar conhecimento em um assunto desta área pode exigir uma auto-confiança no campo que mulheres não têm.
+% Uma justificativa para mulheres responderem menos em comunidades de \emph{STEM} pode ser a de que respostas podem ser consideradas mais competitivas do que perguntas. Afinal, todas as respostas passam por um "processo seletivo" para ser a melhor resposta de uma determinada pergunta, o que não acontece com perguntas nem comentários. Já se sabe que mulheres não se dão bem em ambientes competitivos, principalmente quando precisam competir com homens~\cite{gneezy2003performance}, e tendem a evitá-los~\cite{niederle2005women,croson2009gender}. Além de que, demonstrar conhecimento em um assunto desta área pode exigir uma auto-confiança no campo que mulheres não têm.
 
-Se olharmos para comunidades de áreas de STEM que são conhecidas por terem mais mulheres, observamos que o resultado é similar aos de comunidades não relacionadas à STEM. Tomando como exemplo UX (\textit{user experience}) mulheres respondem mais nesta comunidade, o que pode ser uma demonstração de auto confiança no seu conhecimento no assunto. Mais ainda, UX não é considerada uma disciplina que necessita de um conhecimento inato para ter sucesso na área, sendo este mais um motivo para mulheres não se inibirem em participar desta comunidade de todas as formas possíveis. 
+Se olharmos para comunidades de áreas de \emph{STEM} que são conhecidas por terem mais mulheres, observamos que o resultado é similar aos de comunidades não relacionadas à \emph{STEM}. Tomando como exemplo \emph{UX} (\textit{user experience}) mulheres respondem mais nesta comunidade, o que pode ser uma demonstração de auto confiança no seu conhecimento no assunto. Mais ainda, \emph{UX} não é considerada uma disciplina que necessita de um conhecimento inato para ter sucesso na área, sendo este mais um motivo para mulheres não se inibirem em participar desta comunidade de todas as formas possíveis. 
 
-Ver que mulheres têm aumentado sua proporção de contribuições ao longo do tempo, principalmente em comunidades sobre assuntos relacionados à STEM, nos dá uma esperança que a barreira que existe para que mulheres entrem e contribuam para estas comunidades esteja diminuindo. Já que outras comunidades, como as comunidades FOSS~\cite{powell2010gender}, mulheres que já estão envolvidas tendem a continuar fazendo parte dela. Uma maneira de aumentar a auto confiança destas mulheres quanto ao seu conhecimento também é essencial para aumentar estas proporções, já que elas mesmas consideram ter auto confiança como essencial para se manter em comunidades que elas são maioria~\cite{powell2010gender}.
+Ver que mulheres têm aumentado sua proporção de contribuições ao longo do tempo, principalmente em comunidades sobre assuntos relacionados à \emph{STEM}, nos dá uma esperança que a barreira que existe para que mulheres entrem e contribuam para estas comunidades esteja diminuindo. Já que outras comunidades, como as comunidades \emph{FOSS}~\cite{powell2010gender}, mulheres que já estão envolvidas tendem a continuar fazendo parte dela. Uma maneira de aumentar a autoconfiança destas mulheres quanto ao seu conhecimento também é essencial para aumentar estas proporções, já que elas mesmas consideram ter autoconfiança algo essencial para se manter em comunidades que elas são maioria~\cite{powell2010gender}.
 
-Overall, our results portrait most StackExchange site as having contributor communities with few behavior differences related to gender. Nevertheless, there seem to be two widespread barriers: one for entrance, given the small proportion of female contributors, and a second one related to the premature departure of engaged contributors in some sites. Both of these behaviors are more accentuated in the largest and STEM related sites, suggesting these communities have higher barriers for women. This, together with the fact that women still tend to ask more questions than men in these communities, calls for a deeper qualitative investigation why this pattern emerges.
+% Overall, our results portrait most \emph{StackExchange} site as having contributor communities with few behavior differences related to gender. Nevertheless, there seem to be two widespread barriers: one for entrance, given the small proportion of female contributors, and a second one related to the premature departure of engaged contributors in some sites. Both of these behaviors are more accentuated in the largest and \emph{STEM} related sites, suggesting these communities have higher barriers for women. This, together with the fact that women still tend to ask more questions than men in these communities, calls for a deeper qualitative investigation why this pattern emerges.
 
-No geral, nossos resultados nos mostram que a maioria dos sites do StackExchange possuem comunidades com poucas diferenças de comportamento relacionadas ao gênero. Porém, conseguimos enxergar claramente duas barreiras para a participação de mulheres nestes sites: uma na entrada, visto a baixa proporção de contribuidoras e outra relacionada à partida antecipada de mulheres engajadas. Ambas estas barreiras são mais expressivas nas maiores comunidades relacionadas a STEM, sugerindo que nestas comunidades, mulheres sentem ainda mais dificuldade em participar. Todos esses pensamentos juntamente com o fato de que mulheres tendem a contribuir com mais perguntas do que homens nestas comunidades requerem uma investigação qualitativa aprofundada de modo a entender por que este padrão existe.
+No geral, nossos resultados mostram que a maioria dos sites do \emph{StackExchange} possuem comunidades com poucas diferenças de comportamento relacionadas ao gênero. Porém, conseguimos enxergar claramente duas barreiras para a participação de mulheres nestes sites: uma na entrada, considerando a baixa proporção de contribuidoras e outra relacionada à partida antecipada de mulheres engajadas. Ambas as barreiras são mais expressivas nas maiores comunidades relacionadas a \emph{STEM}, sugerindo que nestas comunidades, mulheres sentem ainda mais dificuldade em participar. Todos esses pensamentos, juntamente com o fato de que mulheres tendem a contribuir com mais perguntas do que homens nestas comunidades, requerem uma investigação qualitativa aprofundada de modo a entender por que este padrão existe.
 
 
 % Esse parágrafo é interessante, mas não acho que cabe aqui.
@@ -44,7 +43,7 @@ No geral, nossos resultados nos mostram que a maioria dos sites do StackExchange
 
 % \subsection{Discussão do design}
 
-% O que nosso estudo deixa bem claro é que as comunidades do StackExchange possuem duas barreiras para a contribuição por parte das mulheres: um para que elas entrem e comecem a participar da comunidade e outra para que elas permaneçam tanto tempo quanto seus colegas do sexo masculino. As comunidades do StackExchange pode estar perdendo muito, em termos de conteúdo, com essa postura por parte das mulheres em seu sites.
+% O que nosso estudo deixa bem claro é que as comunidades do \emph{StackExchange} possuem duas barreiras para a contribuição por parte das mulheres: um para que elas entrem e comecem a participar da comunidade e outra para que elas permaneçam tanto tempo quanto seus colegas do sexo masculino. As comunidades do \emph{StackExchange} pode estar perdendo muito, em termos de conteúdo, com essa postura por parte das mulheres em seu sites.
 
 % É provável que exista preconceito e perseguição dentro destas comunidades sim, assim como boa parte das comunidades onlines. Identificar e eliminar usuários que não têm um comportamento de acordo com os termos da comunidade é uma boa prática. Contudo, é necessário mostrar para as mulheres que isto está sendo feito, para que elas possam se sentir seguras neste ambiente. 
 
@@ -55,6 +54,6 @@ No geral, nossos resultados nos mostram que a maioria dos sites do StackExchange
 
 % Note to self: estou começando a achar que existe prejudice e harassment sim, mas as mulheres que conseguem se engajar com estas comunidades de tecnologia conseguem ignorar essas negatividades. Newcomers podem ver isto como barreira e nem se quer entrar na comunidade.
 
-% "StackOverflow was founded by men, and this community may continued as a group of men until reach a certain popularity, number of users and before the birth of StackExchange along with other communities, as most of them come from branches of StackOverflow. "
+% "StackOverflow was founded by men, and this community may continued as a group of men until reach a certain popularity, number of users and before the birth of \emph{StackExchange} along with other communities, as most of them come from branches of StackOverflow. "
 
 % "This pattern of data suggests, by extension, that women might disproportionately avoid scientific pursuits because their self-views lead them to mischaracterize how well they are objectively doing on any given scientific task. Because they think they are doing more poorly than do men, they are more likely than men to avoid science when given an option." Texto de ehrlinger2003chronic
