--- a/modelo_copin/metodos.tex
+++ b/modelo_copin/metodos.tex
@@ -1,13 +1,14 @@
 %!TEX root = main_mestrado.tex
 \chapter{Metodologia}
 
-Este capítulo detalha os dados e métodos utilizadas para medir quantidade, qualidade e frequência das contribuições dos usuários, assim como o compromisso dos usuários com a comunidade. Aqui também explicaremos como identificamos os gêneros dos usuários. Todo o código utilizado neste experimento pode ser encontrado em um repositório no Github\footnote{https://github.com/mil3na/gender-study-final}. 
+Este capítulo detalha os dados e métodos utilizadas para medir quantidade, qualidade e frequência das contribuições dos usuários, assim como o compromisso dos usuários com a comunidade. Aqui também explicamos como identificamos os gêneros dos usuários. Todo o código utilizado neste experimento pode ser encontrado em um repositório no \emph{Github}\footnote{https://github.com/mil3na/gender-study-final}. 
 
 \section{Dados utilizados}
 
-Nosso estudo usa dados de todas as comunidades do StackExchange em seu último dump de Setembro de 2014. Contudo. Contudo, para que fosse possível realizar a análise, tivemos que remover  algumas comunidades que  não possuíam atividades suficientes, por parte das mulheres, para serem analisadas. Como comunidades muito novas não apresentavam dados suficientes para serem estudados, removemos da nossa pesquisa todas as comunidades do StackExchange, presentes no dump de Setembro de 2014, que tenham menos de 18 meses de idade, além de comunidades que não tinham um número razoável de mulheres. A lista das 85 comunidades estudadas pode ser encontrada aqui~\ref{table:communities}. Mais ainda, apenas os usuários que tenham feito algum tipo de contribuição e têm, no mínimo, 50 pontos de reputação foram estudados. Esta limitação é para garantir que estudamos usuários que estiveram ativos em algum momento na comunidade estudada.
+Nosso estudo usa dados de todas as comunidades do \emph{StackExchange} em seu último \emph{dump} de Setembro de 2014. Contudo, para que fosse possível realizar a análise, tivemos que remover  algumas comunidades que  não possuíam atividades suficientes, por parte das mulheres, para serem analisadas. Como comunidades muito novas não apresentavam dados suficientes para serem estudados, removemos da nossa pesquisa todas as comunidades do \emph{StackExchange}, presentes no \emph{dump} de Setembro de 2014, que tenham menos de 18 meses de idade, além de comunidades que não tinham um número razoável de mulheres. A lista das 85 comunidades estudadas pode ser encontrada na Tabela~\ref{table:communities}. Mais ainda, apenas os usuários que tenham feito algum tipo de contribuição e têm, no mínimo, 50 pontos de reputação foram estudados. Esta limitação é para garantir que estudamos usuários que estiveram ativos em algum momento na comunidade estudada.
 
-\begin{table*}[ht]
+\begin{table*}[Ht]
+% Tabela ficar embaixo
 % \begin{tabular}{@{}ccccc@{}}
 \small
 \centering
@@ -31,72 +32,73 @@ cogsci       & freelancing      & linguistics   & pm           & sound        & 
 \multicolumn{6}{l}{writers}       \\ [2pt]
 \bottomrule
 \end{tabular}
-\caption[Lista de comunidades estudadas]{Lista das comunidades do StackExchange estudadas nesta pesquisa.}~\label{table:communities}
+\caption[Lista de comunidades estudadas]{Lista das comunidades do \emph{StackExchange} estudadas nesta pesquisa.}~\label{table:communities}
 \end{table*}
 
-As informações utilizadas neste estudo foram obtidas no dump trimestral\footnote{https://archive.org/details/stackexchange} oferecido pelo StackExchange. O grupo costuma publicar regularmente todos os dados de todos os seus sites que não contenham informações privadas do usuário (e.g. e-mail). Tais dados incluem perguntas, respostas e comentários postados pelos usuários, assim como os votos (positivos e negativos) recebidos por cada tipo de post. O dump também contém a reputação de cada usuário em cada comunidade. As comunidades presentes nestes dados são classificadas pelo StackExchange dentre estas seis categorias: Technology, Culture/Recreation, Life/Arts, Science, Business e Professional.
-%TODO:A intenção é comparar o comportamento dos usuários das comunidades de Technology e Science com as demais.
+As informações utilizadas neste estudo foram obtidas no \emph{dump} trimestral\footnote{https://archive.org/details/\emph{StackExchange}} oferecido pelo \emph{StackExchange}. O grupo costuma publicar regularmente todos os dados de todos os seus sites que não contenham informações privadas do usuário (e.g. \emph{e-mail}). Tais dados incluem perguntas, respostas e comentários postados pelos usuários, assim como os votos (positivos e negativos) recebidos por cada tipo de post. O \emph{dump} também contém a reputação de cada usuário em cada comunidade. As comunidades presentes nestes dados são classificadas pelo \emph{StackExchange} dentre estas seis categorias: \emph{Technology}, \emph{Culture/Recreation}, \emph{Life/Arts}, \emph{Science}, \emph{Business} e \emph{Professional}.
 
 \section{Inferindo o gênero dos usuários}
 
-Os perfis do StackExchange não possuem explicitamente o gênero de cada usuário, já que a plataforma não exige do usuário esta informação no seu perfil. Sendo assim impossível identificar o gênero de cada usuário automaticamente, com precisão. Já que nosso objetivo neste estudo é apenas investigar o efeito de um usuário, explicitamente, manifestar seu gênero, decidimos focar apenas naqueles usuários que têm a intenção de identificar seu gênero nestas comunidades.
+Os perfis do \emph{StackExchange} não possuem explicitamente o gênero de cada usuário, já que a plataforma não exige do usuário esta informação no seu perfil. Sendo assim impossível identificar o gênero de cada usuário automaticamente, com precisão. Já que nosso objetivo neste estudo é apenas investigar o efeito de um usuário, explicitamente, manifestar seu gênero, decidimos focar apenas naqueles usuários que têm a intenção de identificar seu gênero nestas comunidades.
 
-As comunidades do StackExchange possuem três tipos de atividades principais: perguntar, responder e comentar. Durante a participação de um usuário nas atividades principais, só é possível identificar o gênero do seu colega por dois meios: sua foto ou nome de usuário. Utilizamos o nome de usuário para identificar o gênero do mesmo. Sabe-se que a maioria dos usuários do StackExchange vêm de países ocidentais, provavelmente tendo nomes típicos ocidentais~\cite{schenk2013geo}, e pesquisas anteriores mostram que, para pessoas com nomes ocidentais, inferir o gênero de uma alguém através de sue primeiro nome é um método acurado tanto para redes sociais que requerem o nome real do usuário~\cite{tang2011s}, quanto para as que não o requerem~\cite{burger2011discriminating,liu2013s}.
+As comunidades do \emph{StackExchange} possuem três tipos de atividades principais: perguntar, responder e comentar. Durante a participação de um usuário nas atividades principais, só é possível identificar o gênero do seu colega por dois meios: sua foto ou nome de usuário. Utilizamos o nome de usuário para identificar o gênero do mesmo. Sabe-se que a maioria dos usuários do \emph{StackExchange} vêm de países ocidentais, provavelmente tendo nomes típicos ocidentais~\cite{schenk2013geo}, e pesquisas anteriores mostram que, para pessoas com nomes ocidentais, inferir o gênero de uma alguém através de sue primeiro nome é um método acurado tanto para redes sociais que requerem o nome real do usuário~\cite{tang2011s}, quanto para as que não o requerem~\cite{burger2011discriminating,liu2013s}.
 
-Nosso método de inferência de gênero é similar ao encontrado em Liu et al.~\cite{liu2013s} e Cunha et al.~\cite{cunha2014he}. Nós utilizamos o Global Name Data~\cite{Hyland:2013:Online}, um banco de dados de nomes baseado em registros de nascimentos nos Estados Unidos e Reino Unido, que contém mais de 100,000 nomes únicos e a frequência com que cada nome é associado a um menino ou menina. Com este banco de dados fizemos um classificador que categoriza os usuários em três classes: Feminino, Masculino e Desconhecido, baseado na contagem de frequência probabilística de cada nome. Um usuário é classificado como Masculino se existir uma proporção significantemente maior de meninos registrados com esse nome, segundo o Global Name Data. O gênero de um nome é considerado Desconhecido caso não haja diferença estatística entre a proporção de homens e mulheres catalogados com este nome. Nossa análise só leva em consideração aqueles usuários que possuem nomes os quais é possível inferir com confiança o gênero, de acordo com este método. Com este método, conseguimos identificar, em média, 37\% dos usuários (mínimo: 27\%, máximo: 52\%) dos usuários das comunidades estudadas. Sendo sua grande maioria homens: em média, 93\% são homens (mínimo: 74\%, máximo: 98\%). A Tabela \ref{table:categories} apresenta a média de usuários identificados por gênero, em cada categoria.
+Nosso método de inferência de gênero é similar ao encontrado em Liu \textit{et al}.~\cite{liu2013s} e Cunha \textit{et al}.~\cite{cunha2014he}. Nós utilizamos o \emph{Global Name Data}~\cite{Hyland:2013:Online}, um banco de dados de nomes baseado em registros de nascimentos nos Estados Unidos e Reino Unido, que contém mais de 100,000 nomes únicos e a frequência com que cada nome é associado a um menino ou menina. Com este banco de dados fizemos um classificador que categoriza os usuários em três classes: Feminino, Masculino e Desconhecido, baseado na contagem de frequência probabilística de cada nome. Um usuário é classificado como Masculino se existir uma proporção significantemente maior de meninos registrados com esse nome, segundo o \emph{Global Name Data}. O gênero de um nome é considerado Desconhecido caso não haja diferença estatística entre a proporção de homens e mulheres catalogados com este nome. Nossa análise só leva em consideração aqueles usuários que possuem nomes os quais é possível inferir com confiança o gênero, de acordo com este método. Com este método, conseguimos identificar, em média, 37\% dos usuários (mínimo: 27\%, máximo: 52\%) dos usuários das comunidades estudadas. Sendo sua grande maioria homens: em média, 93\% são homens (mínimo: 74\%, máximo: 98\%). O Apêndice \ref{app:info} apresenta o sumário dos usuários identificados por gênero, em cada comunidade.
 
-\begin{table}[h]
-\centering
-\begin{tabular}{@{}rlllr@{}}
-\toprule
-{\small\textit{Categoria}} & {\small \textit{Comunidades}} & {\small \textit{Mulheres}} & {\small \textit{Homens}} & {\small \textit{Idade (meses)}} \\ \midrule
-business           & 3  & 31  & 609  & 43 \\
-culture-recreation & 21 & 68  & 893  & 39 \\
-life-arts          & 15 & 92  & 1046 & 44 \\
-professional       & 2  & 81  & 800  & 25 \\
-science            & 12 & 148 & 1987 & 43 \\
-technology         & 32 & 476 & 8240 & 47 \\ \bottomrule
-\end{tabular}
-\caption[Média de usuários identificados por categoria]{A média da quantidade de homens e mulheres identificados em cada categoria, o número de comunidades por categoria e a média das idades das comunidades de cada categoria, em meses.}~\label{table:categories}
-\end{table}
+% \begin{table}[h]
+% \centering
+% \begin{tabular}{@{}rlllr@{}}
+% \toprule
+% {\small\textit{Categoria}} & {\small \textit{Comunidades}} & {\small \textit{Mulheres}} & {\small \textit{Homens}} & {\small \textit{Idade (meses)}} \\ \midrule
+% business           & 3  & 31  & 609  & 43 \\
+% culture-recreation & 21 & 68  & 893  & 39 \\
+% life-arts          & 15 & 92  & 1046 & 44 \\
+% professional       & 2  & 81  & 800  & 25 \\
+% science            & 12 & 148 & 1987 & 43 \\
+% technology         & 32 & 476 & 8240 & 47 \\ \bottomrule
+% \end{tabular}
+% \caption[Média de usuários identificados por categoria]{A média da quantidade de homens e mulheres identificados em cada categoria, o número de comunidades por categoria e a média das idades das comunidades de cada categoria, em meses.}~\label{table:categories}
+% \end{table}
 
 \section{Medindo contribuições e engajamento}
 
-A questão principal do nosso estudo é esclarecer o quão diferente é a participação de homens e mulheres em comunidades de perguntas e respostas, comparando àquelas relacionadas a STEM (pertencentes às categorias Technology e Science) com as demais. Para responder esta questão, nós à dividimos em quatro perguntas mais específicas.
+A questão principal do nosso estudo é esclarecer o quão diferente é a participação de homens e mulheres em comunidades de perguntas e respostas, comparando àquelas relacionadas a \emph{STEM} (pertencentes às categorias \emph{Technology} e \emph{Science}) com as demais. Para responder esta questão, nós a dividimos em quatro perguntas mais específicas, que serão relatadas a seguir.
 
 \subsection{Número de contribuições}
 
-Nossa primeira pergunta é: \textit{O número de contribuições feitas por homens e por mulheres difere significantemente nas comunidades observadas?} Esta pergunta é relacionada aos três tipos principais de contribuição na plataforma StackExchange: perguntas, respostas e comentários, além da soma de todas.
+Nossa primeira pergunta é: \textit{O número de contribuições feitas por homens e por mulheres difere significantemente nas comunidades observadas?} Esta pergunta é relacionada aos três tipos principais de contribuição na plataforma \emph{StackExchange}: perguntas, respostas e comentários, além da soma de todas.
 
 \subsection{Qualidade}
 
-O controle de qualidade das perguntas e respostas na plataforma StackExchange é feito pela própria comunidade através do sistema de votos. Usuários com uma determinada reputação podem votar "para cima" e "para baixo", caso considerem o post como uma boa ou má contribuição, respectivamente. Esses votos geram pontos, positivos ou negativos, que, dentre outros fatores, formam a reputação de um usuário. 
+O controle de qualidade das perguntas e respostas na plataforma \emph{StackExchange} é feito pela própria comunidade através do sistema de votos. Usuários com uma determinada reputação podem votar "para cima" e "para baixo", caso considerem o post como uma boa ou má contribuição, respectivamente. Esses votos geram pontos, positivos ou negativos, que, dentre outros fatores, formam a reputação de um usuário. 
 
 Tendo em vista o processo de avaliação de qualidade descrito acima, a nossa segunda pergunta é: \textit{As contribuições feitas por diferentes gêneros são vistas, pela comunidade, com níveis de qualidade diferentes?} Caso exista uma avaliação negativa indiscriminada das contribuições vindas de mulheres, elas podem estar contribuindo menos porque suas contribuições não são bem vindas, fazendo com que elas sintam que falharam e as desencorajando de continuar participando. 
 
-Utilizamos a pontuação criada pelo sistema de votos para medir a qualidade das perguntas e respostas de cada usuário. A qualidade das perguntas de um usuário é definida como a média da pontuação de todas as perguntas feitas pelo usuário, ou zero, caso o usuário tenha contribuído com nenhuma pergunta. Para respostas, utilizamos duas métricas: a primeira é a taxa de aceitação que mede a proporção de respostas do usuário que foram aceitas como melhor resposta pelo interrogador. A segunda é a utilidade média das respostas, proposta por Furtado et al.~\cite{furtado2013contributor}. Esta métrica é a média da normalização do saldo de votos das respostas de um usuário comparado com outras respostas à mesma pergunta. Para ambas as métricas para respostas, apenas usuários com pelo menos uma resposta são levados em consideração.
+Utilizamos a pontuação criada pelo sistema de votos para medir a qualidade das perguntas e respostas de cada usuário. A qualidade das perguntas de um usuário é definida como a média da pontuação de todas as perguntas feitas pelo usuário, ou zero, caso o usuário tenha contribuído com nenhuma pergunta. Para respostas, utilizamos duas métricas: a primeira é a taxa de aceitação que mede a proporção de respostas do usuário que foram aceitas como melhor resposta pelo interrogador. A segunda é a utilidade média das respostas, proposta por Furtado \textit{et al}.~\cite{furtado2013contributor}. Esta métrica é a média da normalização do saldo de votos das respostas de um usuário comparado com outras respostas à mesma pergunta. Para ambas as métricas para respostas, apenas usuários com pelo menos uma resposta são levados em consideração.
 
 \subsection{Engajamento}
 
 Neste estudo, usamos a definição de engajamento a qual o descreve como o esforço de um usuário ao longo do tempo. Nós medimos engajamento tanto em relação ao tempo total que o usuário permanece na comunidade (seu tempo de vida) quanto sua frequência de contribuição durante seu tempo de atividade.
 
-Levando em consideração estas definições, nossa terceira pergunta é: \textit{O engajamento de homens e mulheres difere nas comunidades estudadas?} É importante notar que caso haja diferença no hábito de contribuição entre homens e mulheres, podemos verificar se usuários de algum dos gêneros deixam a comunidade mais cedo ou têm uma taxa de contribuição menor, nos ajudando a entender melhor as diferenças (ou similaridades) entre homens e mulheres com relação ao seus hábitos de contribuição.
+Levando em consideração estas definições, nossa terceira pergunta é: \textit{O engajamento de homens e mulheres difere nas comunidades estudadas?} É importante notar que, caso haja diferença no hábito de contribuição entre homens e mulheres, podemos verificar se usuários de algum dos gêneros deixam a comunidade mais cedo ou têm uma taxa de contribuição menor, nos ajudando a entender melhor as diferenças (ou similaridades) entre homens e mulheres com relação ao seus hábitos de contribuição.
 
-O tempo de vida de um usuário em uma comunidade do StackExchange não pode ser considerada apenas como a diferença entre a data de sua primeira contribuição e a última. Já que uma pergunta (e suas respectivas respostas) podem ser transferidas entre comunidades\footnote{http://meta.stackexchange.com/questions/2683/move-questions-between-stack-exchange-sites}, nós definimos o tempo de vida de um usuário em uma determinada comunidade como segue: antes de tudo, definimos o primeiro dia de atividade do usuário como a data mais recente entre o dia de cadastro do usuário e a data da sua primeira contribuição na comunidade. Esta medida evita que levemos em consideração um período que o usuário não esteve ativo na comunidade em questão, mas esteve em outra comunidade e sua pergunta foi transferida. Mais ainda, definimos que um usuário está inativo quando ele não produz nenhuma contribuição por um período de tempo maior que o intervalo de morte da comunidade. Este intervalo, medido em dias, é calculado da seguinte maneira: para cada usuário obtemos o maior intervalo entre duas de suas contribuições consecutivas. O intervalo de morte é a média dos maiores intervalos de todos os usuários. Por fim, o tempo de vida de um usuário é a diferença entre a data da sua última contribuição e a data da sua primeira atividade(ou cadastro), medida em dias.
+O tempo de vida de um usuário em uma comunidade do \emph{StackExchange} não pode ser considerado apenas como a diferença entre a data de sua primeira contribuição e a última. Já que uma pergunta (e suas respectivas respostas) podem ser transferidas entre comunidades\footnote{http://meta.stackExchange.com/questions/2683/move-questions-between-stack-exchange-sites}. Desse modo, definimos a seguir o tempo de vida de um usuário em uma determinada comunidade. 
+
+Antes de tudo, definimos o primeiro dia de atividade do usuário como a data mais recente entre o dia de cadastro do usuário e a data da sua primeira contribuição na comunidade. Esta medida evita que levemos em consideração um período que o usuário não esteve ativo na comunidade em questão, mas esteve em outra comunidade e sua pergunta foi transferida. Mais ainda, definimos que um usuário está inativo quando ele não produz nenhuma contribuição por um período de tempo maior que o intervalo de morte da comunidade. Este intervalo, medido em dias, é calculado da seguinte maneira: para cada usuário obtemos o maior intervalo entre duas de suas contribuições consecutivas. O intervalo de morte é a média dos maiores intervalos de todos os usuários. Por fim, o tempo de vida de um usuário é a diferença entre a data da sua última contribuição e a data da sua primeira atividade(ou cadastro), medida em dias.
 
 A frequência de participação, segunda métrica usada nesta pergunta, é definida como o total de contribuições feita por um usuário (perguntas, respostas ou comentários) dividido pelo número de dias nos quais o usuário estava ativo. Ao contrário do tempo de vida, aqui nós consideramos apenas os dias em que o usuário contribuiu para a comunidade.
 
 \subsection{Contribuições e registros ao longo do tempo}
 
-Para esta pergunta, queremos verificar se a falta de contribuição por parte das mulheres é algo novo nestas comunidades, ou ainda se existem padrões de contribuição ao longo do tempo, seja de aumento ou redução, mais ainda investigamos se existe alguma tendência no número de registros feito por cada gênero. Em outras palavras, nós queremos responder à seguinte pergunta: \textit{A proporção de contribuições e registros feitos por usuários de cada gênero tem aumentado ou reduzido ao longo do tempo?}. 
+Para esta pergunta, verificamos se a falta de contribuição por parte das mulheres é algo novo nestas comunidades, ou ainda se existem padrões de contribuição ao longo do tempo, seja de aumento ou redução. Investigamos também se existe alguma tendência no número de registros feito por cada gênero. Em outras palavras, buscamos responder à seguinte pergunta: \textit{A proporção de contribuições e registros feitos por usuários de cada gênero tem aumentado ou reduzido ao longo do tempo?}. 
 
 \section{Distribuições e testes}
 
 % Por motivos de espaço, um sumário de nossas métricas podem ser encontrado aqui\footnote{URL anonymized for submission}. 
 
-A maioria das variáveis possuem uma distribuição bastante enviesada e com certeza não normal. Portanto, utilizamos testes não paramétricos. Para comparar o número de contribuições (e de cada tipo de contribuição), a qualidade das contribuições e a frequência de contribuição de cada gênero utilizamos o teste Mann-Whitney não pareado para verificar dominância estocástica. Para testar se homens e mulheres possuem um tempo de vida divergente na comunidade utilizamos a \textit{Survival Analysis} junto com um teste  LogRank. Já para a quarta pergunta tomamos a proporção de contribuição e registros feitos por cada grupo de gênero, a cada seis meses, e verificamos se esta proporção aumenta ou não, com a ajuda de uma regressão utilizando o método dos mínimos quadrados.
+A maioria das variáveis possuem uma distribuição bastante enviesada e com certeza não normal, como pode ser visto no Apêndice~\ref{app:distrib}. Portanto, utilizamos testes não paramétricos. Para comparar o número de contribuições (e de cada tipo de contribuição), a qualidade das contribuições e a frequência de contribuição de cada gênero utilizamos o teste \emph{Mann-Whitney-U} não pareado para verificar dominância estocástica. Para testar se homens e mulheres possuem um tempo de vida divergente na comunidade utilizamos a \textit{Survival Analysis} junto com um teste \emph{LogRank}. Já para a quarta pergunta tomamos a proporção de contribuição e registros feitos por cada grupo de gênero, a cada seis meses, e verificamos se esta proporção aumenta ou não, com a ajuda de uma regressão utilizando o método dos mínimos quadrados.
 
-O sumário das variáveis estudadas pode ser encontrada nos Apêndices~\ref{app:primeiro}
+O sumário das variáveis estudadas, para cada pergunta de pesquisa, pode ser encontrada nos Apêndices~\ref{app:q1},~\ref{app:q2},~\ref{app:q3} e ~\ref{app:q4}.
 
 % section methods (end)
 
