--- a/modelo_copin/resultados.tex
+++ b/modelo_copin/resultados.tex
@@ -15,7 +15,7 @@ Este capítulo apresenta os resultados para cada uma das quatro perguntas de pes
 \section{Número de contribuições}
 % For all four types of contribution considered, a common pattern emerges in our results: the amount of contributions from men and women is not significantly different in the majority of sites (Mann-Whitney-Wilcoxon U significance tests, $\alpha = 0.05$). % [n] Show this result. TODO
 
-Para todos os tipos de contribuições considerados um padrão em comum surgiu em nossos resultados: a diferença da quantidade de contribuições vindas de homens e mulheres não é significativa na maioria dos sites (teste Mann-Whitney U, $\alpha = 0.05$)
+Para todos os tipos de contribuições considerados um padrão em comum surgiu em nossos resultados: a diferença da quantidade de contribuições vindas de homens e mulheres não é significativa na maioria dos sites (teste \emph{Mann-Whitney U}, $\alpha = 0.05$)
 
 % For all types of contribution, when there are differences in contribution levels, there is larger number of sites in which a typical women contributor is more active than sites in which men tend to contribute more. The difference in this number is the highest for questions ($21/62/2$), followed by answers ($18/56/11$) and all contributions combined ($10/73/2$). 
 
@@ -29,9 +29,9 @@ Dos sites em que pudemos observar uma diferença estatística significante, exis
   \caption[Comparação do número de respostas em comunidades onde mulheres respondem mais.]{Comparação do número de respostas vindas de contribuidores de diferentes gêneros nos sites onde pode-se verificar uma diferença estatisticamente significante e mulheres contribuem mais do que homens. As caixas representam os quartis das distribuições enquanto os traços mostram o primeiro e nonagésimo nono percentis. Lembrando que o teste MWW pode achar diferença estatística na soma dos rankings mesmo que os quartis sejam similares nas duas amostras. Para visualizar a distribuição em escala de log o acrescentamos 1 ao valor original do número de contribuições realizadas por cada usuário.}~\label{figure:answers}
 \end{figure}
 
-% Interestingly, the categories in which these differences happen differ for answers in contrast with the other types of contribution. For questions, comments, and all contributions combined, the communities where women are usually more active are related to STEM categories. For questions, this distribution is $16/28/0$ for the STEM sites, as seen in Figure~\ref{figure:questions}. In contrast, when considering answers, only three of the 18 sites in which women tend to answer more are STEM sites (see Figure ~\ref{figure:answers}). Most often, sites in which women answer significantly more than men happen in the life-arts or professional categories. Also, two of the three STEM sites in which women answer more are stereotypically associated with women: UX and Software Quality Assurance. The other way around, communities which men answer more than women can be seen on Figure~\ref{figure:answers-men}.
+% Interestingly, the categories in which these differences happen differ for answers in contrast with the other types of contribution. For questions, comments, and all contributions combined, the communities where women are usually more active are related to \emph{STEM} categories. For questions, this distribution is $16/28/0$ for the \emph{STEM} sites, as seen in Figure~\ref{figure:questions}. In contrast, when considering answers, only three of the 18 sites in which women tend to answer more are \emph{STEM} sites (see Figure ~\ref{figure:answers}). Most often, sites in which women answer significantly more than men happen in the life-arts or professional categories. Also, two of the three \emph{STEM} sites in which women answer more are stereotypically associated with women: UX and Software Quality Assurance. The other way around, communities which men answer more than women can be seen on Figure~\ref{figure:answers-men}.
 
-Interessante notar que existe uma diferença no padrão de categorias nas quais podemos notar diferenças no número de respostas entre homens e mulheres, comparando aos outros tipos de contribuição. Para perguntas, comentários e a soma de todas as contribuições, as comunidades onde mulheres são geralmente mais ativas pertencem a categorias relacionadas a STEM. Para perguntas a distribuição de comunidades relacionadas a STEM é $16/28/0$, como pode ser observado na Figura~\ref{figure:questions}. Contudo, quando olhamos para respostas, apenas três das dezoito comunidades onde mulheres respondem mais do que homens são relacionadas a STEM (como pode ser visto na Figura~\ref{figure:answers}). É mais comum encontrar comunidades das categorias Life/Arts ou Professional dentre os sites que pode-se observar que mulheres respondem significantemente mais do que homens. Mais ainda, duas das três comunidades relacionadas a STEM onde mulheres respondem mais que homens abordam assuntos que são estereotipados como mais femininos: UX e \textit{Software Quality Assurance}. As comunidades onde homens respondem significantemente mais do que mulheres podem ser vistas na Figura~\ref{figure:answers-men}.
+Interessante notar que existe uma diferença no padrão de categorias nas quais podemos notar diferenças no número de respostas entre homens e mulheres, comparando aos outros tipos de contribuição. Para perguntas, comentários e a soma de todas as contribuições, as comunidades onde mulheres são geralmente mais ativas pertencem a categorias relacionadas a \emph{STEM}. Para perguntas a distribuição de comunidades relacionadas a \emph{STEM} é $16/28/0$, como pode ser observado na Figura~\ref{figure:questions}. Contudo, quando olhamos para respostas, apenas três das dezoito comunidades onde mulheres respondem mais do que homens são relacionadas a \emph{STEM} (como pode ser visto na Figura~\ref{figure:answers}). É mais comum encontrar comunidades das categorias \emph{Life/Arts} ou \emph{Professional} dentre os sites que pode-se observar que mulheres respondem significantemente mais do que homens. Mais ainda, duas das três comunidades relacionadas a \emph{STEM} onde mulheres respondem mais que homens abordam assuntos que são estereotipados como mais femininos: \emph{UX} e \textit{Software Quality Assurance}. As comunidades onde homens respondem significantemente mais do que mulheres podem ser vistas na Figura~\ref{figure:answers-men}.
 
 \begin{figure}
   % \centering
@@ -43,7 +43,7 @@ Interessante notar que existe uma diferença no padrão de categorias nas quais 
 
 % These results point that women who engage with most sites we study and display their gender usually do not contribute significantly less than men. In fact, when there are differences, they are most often on the opposite direction. 
 
-Estes resultados nos mostram que mulheres que identificam seu gênero e que se engajam à comunidade, na maioria dos sites, não contribuem menos do que os homens. Pelo contrário: quando podemos observar diferenças, elas são frequentemente apontam que mulheres contribuem mais do que homens.
+Estes resultados nos mostram que mulheres que identificam seu gênero e que se engajam à comunidade, na maioria dos sites, não contribuem menos do que os homens. Ao contrário: quando podemos observar diferenças, elas são frequentemente apontam que mulheres contribuem mais do que homens.
 
 \section{Qualidade} % (fold)
 \label{subsec:qualidade}
@@ -58,13 +58,13 @@ Poucos foram os sites que apresentaram uma diferença significante em como a com
 \section{Dedicação}% (fold)
 % For the metrics that consider time, the differences that we observe have a clear trend. First, for most sites, there is no significant difference in the lifetime or activity frequency of men and women. However, when differences in lifetime occur, they happen more often because men stay for longer in a community than the opposite ($1/70/14$). Conversely, the frequency of contributions in active days happens more often because women are more active than the other way around ($10/74/1$). 
 
-Para as métricas relacionadas ao tempo dedicado à comunidade, as diferenças observadas possuem um padrão bem claro. Primeiramente, para a maioria dos sites, não há diferença estatística quanto ao tempo de vida ou frequência de atividade de homens e mulheres. Contudo, quando constatamos diferença no tempo de vida, estas acontecem porque homens passam mais tempo na comunidade do que mulheres ($1/70/14$). E o contrário acontece com relação a frequência de contribuição em dias ativos: mulheres contribuem mais frequentemente do que homens ($10/74/1$).
+Para as métricas relacionadas ao tempo dedicado à comunidade, as diferenças observadas possuem um padrão bem claro. Primeiramente, para a maioria dos sites, não há diferença estatística quanto ao tempo de vida ou frequência de atividade de homens e mulheres. Contudo, quando constatamos diferença no tempo de vida, estas acontecem porque homens passam mais tempo na comunidade do que mulheres ($1/70/14$). E o contrário acontece com relação à frequência de contribuição em dias ativos: mulheres contribuem mais frequentemente do que homens ($10/74/1$).
 
-% We also observe that the largest difference in lifetime occurs in StackOverflow, the the most popular and oldest site in StackExchange. Moreover, the following three sites with largest differences in lifetime are also old and STEM-related: MathOverflow, SuperUser and ServerFault, See Table~\ref{table:lifetime}. 
+% We also observe that the largest difference in lifetime occurs in StackOverflow, the the most popular and oldest site in \emph{StackExchange}. Moreover, the following three sites with largest differences in lifetime are also old and \emph{STEM}-related: MathOverflow, SuperUser and ServerFault, See Table~\ref{table:lifetime}. 
 
-Nós também notamos que as maiores diferenças entre os gêneros quanto ao tempo de vida na comunidade ocorre no StackOverflow, o mais popular e também o mais antigo site do StackExchange. Mais ainda, os próximos três sites em grandeza de diferença de tempo de vida também são antigos e relacionados a STEM: MathOverflow, SuperUser e ServerFault. Estas diferenças podem ser observadas na Tabela~\ref{table:lifetime}. 
+Nós também notamos que as maiores diferenças entre os gêneros quanto ao tempo de vida na comunidade ocorre no StackOverflow, o mais popular e também o mais antigo site do \emph{StackExchange}. Mais ainda, os próximos três sites em grandeza de diferença de tempo de vida também são antigos e relacionados a \emph{STEM}: \emph{MathOverflow}, \emph{SuperUser} e \emph{ServerFault}. Estas diferenças podem ser observadas na Tabela~\ref{table:lifetime}. 
 
-\begin{table}[h]
+\begin{table}[Htbp]
 \centering
 \begin{tabular}{@{}rllr@{}}
 \toprule
@@ -88,23 +88,23 @@ Nós também notamos que as maiores diferenças entre os gêneros quanto ao temp
 \caption[Diferença de tempo de vida entre homens e mulheres]{Sites onde podemos observar uma diferença estatística significante entre homens e mulheres quanto ao seu tempo de vida na comunidade. Apresentamos a diferença entre a mediana de dias ativos, a idade da comunidade em dias e sua categoria.}~\label{table:lifetime}
 \end{table}
 
-% For frequency, a different pattern happens. In all seven STEM sites for which there is a difference in the frequency of activity, women have a higher frequency than men. Together with the lifetime results, this suggests that although women leave the community sooner than men, they act more while they are still engaged with the community.
+% For frequency, a different pattern happens. In all seven \emph{STEM} sites for which there is a difference in the frequency of activity, women have a higher frequency than men. Together with the lifetime results, this suggests that although women leave the community sooner than men, they act more while they are still engaged with the community.
 
-Com relação à frequência, um padrão diferente pode ser observado. Em todos os sete sites relacionados a STEM que apresentaram diferença estatística com relação à frequência de atividade, mulheres contribuem mais frequentemente do que homens. Assimilando isto com o resultado relacionado ao tempo de vida, podemos inferir que, apesar que mulheres deixam a comunidade antes que os homens, elas contribuem mais enquanto durante o tempo que ainda estão associadas ao site.
+Com relação à frequência, um padrão diferente pode ser observado. Em todos os sete sites relacionados a \emph{STEM} que apresentaram diferença estatística com relação à frequência de atividade, mulheres contribuem mais frequentemente do que homens. Assimilando isto com o resultado relacionado ao tempo de vida, podemos inferir que, apesar que mulheres deixam a comunidade antes que os homens, elas contribuem mais enquanto durante o tempo que ainda estão associadas ao site.
 
 
 \section{Contribuições e registros ao longo do tempo}
-% For the dynamics of contributions coming from men and women, we see that in roughly a quarter of the sites, the fraction of contributions coming from women is increasing ($20/60/5$). Albeit less pronounced, for the communities where proportion of registrations from different genders have a significant trend over time, it happens more often that the number of registrations coming from women is increasing: $8/76/1$. Both of these trends are also stronger considering only STEM sites: $16/25/3$ for contributions over time, and $6/38/0$ for proportion of new registrations.
+% For the dynamics of contributions coming from men and women, we see that in roughly a quarter of the sites, the fraction of contributions coming from women is increasing ($20/60/5$). Albeit less pronounced, for the communities where proportion of registrations from different genders have a significant trend over time, it happens more often that the number of registrations coming from women is increasing: $8/76/1$. Both of these trends are also stronger considering only \emph{STEM} sites: $16/25/3$ for contributions over time, and $6/38/0$ for proportion of new registrations.
 
-Observando as contribuições de homens e mulheres ao longo do tempo notamos que em, aproximadamente, um quarto dos sites estudados a proporção das contribuições vindas de mulheres está aumentando ($20/60/5$). Apesar de não tão evidente, das comunidades que apresentaram diferença estatística quanto aos registos feitos por homens e mulheres ao longo do tempo é possível ver um padrão: os registros de mulheres têm aumentado ($8/76/1$). Ambos resultados são mais visíveis se considerarmos apenas os sites relacionados a STEM: $16/25/3$ para contribuições ao longo do tempo e $6/38/0$ para a proporção de novos registros.
+Observando as contribuições de homens e mulheres ao longo do tempo notamos que em, aproximadamente, um quarto dos sites estudados a proporção das contribuições vindas de mulheres está aumentando ($20/60/5$). Apesar de não tão evidente, das comunidades que apresentaram diferença estatística quanto aos registos feitos por homens e mulheres ao longo do tempo é possível ver um padrão: os registros de mulheres têm aumentado ($8/76/1$). Ambos resultados são mais visíveis se considerarmos apenas os sites relacionados a \emph{STEM}: $16/25/3$ para contribuições ao longo do tempo e $6/38/0$ para a proporção de novos registros.
 
 \section{Focando nos maiores sites} %  DEixamos essa seção? Retirada.
-% The two largest sites of StackExchange -- StackOverflow and SuperUser -- are much larger and older than the remainder sites in our data. Because they thus own a significant proportion of all StackExchange users, we highlight their behavior. In both sites, there men have significantly longer lifetimes, and answers more questions. On the other hand, the proportion of new registrations coming from women has increased over time. 
+% The two largest sites of \emph{StackExchange} -- StackOverflow and SuperUser -- are much larger and older than the remainder sites in our data. Because they thus own a significant proportion of all \emph{StackExchange} users, we highlight their behavior. In both sites, there men have significantly longer lifetimes, and answers more questions. On the other hand, the proportion of new registrations coming from women has increased over time. 
 
-Os dois maiores sites do StackExchange -- StackOverflow e SuperUser -- são muito maiores e mais velhos que os demais sites disponíveis na nossa amostra. Já que juntos eles possuem uma proporção significante dos usuários de toda a plataforma StackExchange, achamos por bem evidenciar o comportamento dos usuários nestas comunidades. Em ambos os sites, homens têm um tempo de vida significantemente maior e respondem a mais perguntas. Por outro lado, a proporção de registros feitos por mulheres têm aumentado com o tempo.
+Os dois maiores sites do \emph{StackExchange} -- \emph{StackOverflow} e \emph{SuperUser} -- são muito maiores e mais antigos que os demais sites disponíveis na nossa amostra. Já que juntos eles possuem uma proporção significante dos usuários de toda a plataforma \emph{StackExchange}, achamos por bem evidenciar o comportamento dos usuários nestas comunidades. Em ambos os sites, homens têm um tempo de vida significantemente maior e respondem a mais perguntas. Por outro lado, a proporção de registros feitos por mulheres têm aumentado com o tempo.
 
-% A comparison of  the number of contributions on the top five bigger StackExchange communities related to STEM can be seen on Figure~\ref{figure:top-five}.
-Uma comparação do número de contribuições nos cinco maiores sites do StackExchange relacionados a STEM pode ser encontrada na Figura~\ref{figure:top-five}.
+% A comparison of  the number of contributions on the top five bigger \emph{StackExchange} communities related to \emph{STEM} can be seen on Figure~\ref{figure:top-five}.
+Uma comparação do número de contribuições nos cinco maiores sites do \emph{StackExchange} relacionados a \emph{STEM} pode ser encontrada na Figura~\ref{figure:top-five}.
 
 
 \begin{figure}
@@ -112,7 +112,7 @@ Uma comparação do número de contribuições nos cinco maiores sites do StackE
   % \raggedleft
   % \includegraphics[width=1\columnwidth]{figures/five-largest_quantity.pdf}
   \includegraphics[width=1\columnwidth]{figures/test.pdf}
-  \caption[Comparação do número de contribuições na 5 maiores comunidades.]{Comparação do número de contribuições vindas de usuários de diferentes gêneros nos cinco maiores sites (em quantidade de usuários) relacionados a STEM do StackExchange. As caixas representam os quartis das distribuições enquanto os traços mostram o primeiro e nonagésimo nono percentis.}~\label{figure:top-five}
+  \caption[Comparação do número de contribuições na 5 maiores comunidades.]{Comparação do número de contribuições vindas de usuários de diferentes gêneros nos cinco maiores sites (em quantidade de usuários) relacionados a \emph{STEM} do \emph{StackExchange}. As caixas representam os quartis das distribuições enquanto os traços mostram o primeiro e nonagésimo nono percentis.}~\label{figure:top-five}
 \end{figure}
 % section conclusions (end)
 
