--- a/modelo_copin/resumo.tex
+++ b/modelo_copin/resumo.tex
@@ -1,2 +1,4 @@
 %!TEX root = main_mestrado.tex
-Sites de perguntas e respostas são conhecidos por serem uma fonte de conhecimento simples e confiável. Os sites do StackExchange se destacam estando dentre as maiores comunidades de perguntas e respostas online, principalmente se considerarmos aquelas relacionados à STEM. Assim como em outras comunidades online, mulheres são uma minoria nos sites do Stackexchange, fazendo com que estes sites não se beneficiem de pontos de vista diversificados na criação de seu conteúdo. Esta pesquisa investiga se mulheres que se dedicam aos sites do StackExchange são influenciadas a contribuir menos e deixar a comunidade. Para isso, examinamos diferenças entre os gêneros quanto ao número de contribuições feitas aos sites, o tempo que passaram contribuindo e quanto a diferença de qualidade das suas contribuições segundo a comunidade. Nossos resultados mostram que, na maioria dos sites, mulheres contribuem tanto quanto homens, sendo suas contribuições com qualidade e por intervalos de tempo similares aos homens. Quando percebe-se diferença no número de contribuições, são as mulheres que tendem a se destacar. Mais ainda, encontramos que a proporção de contribuições vindas de mulheres nos sites relacionados a STEM do StackExchange estão aumentando em algumas comunidades. Estes resultados ajudam a melhorar a visão que temos das contribuições feitas por mulheres neste tipo de site, gerando repercussão para pesquisas futuras assim como discussão de design para os administradores.
+Sites de perguntas e respostas são conhecidos por serem uma fonte de conhecimento simples e confiável. Os sites do \emph{StackExchange} se destacam por estarem dentre as maiores comunidades de perguntas e respostas online, principalmente se considerarmos aquelas relacionadas à \textit{STEM}. Assim como em outras comunidades online, mulheres são uma minoria nos sites do Stackexchange, fazendo com que estes sites não se beneficiem de pontos de vista diversificados na criação de seu conteúdo. Esta pesquisa investiga se mulheres que se dedicam aos sites do \emph{StackExchange} são influenciadas a contribuir menos e deixar a comunidade. Para isso, examinamos diferenças entre os gêneros quanto ao número de contribuições feitas aos sites, o tempo que passaram contribuindo e quanto a diferença de qualidade das suas contribuições segundo a comunidade. Nossos resultados mostram que, na maioria dos sites, mulheres contribuem tanto quanto homens, sendo suas contribuições com qualidade e por intervalos de tempo similares aos homens. Quando percebe-se diferença no número de contribuições, são as mulheres que tendem a se destacar. Mais ainda, encontramos que a proporção de contribuições vindas de mulheres nos sites relacionados a \emph{STEM} do \emph{StackExchange} está aumentando em algumas comunidades. Estes resultados ajudam a melhorar a visão que temos das contribuições feitas por mulheres neste tipo de site, gerando repercussão para pesquisas futuras, assim como discussão de design para os administradores.
+
+% TODO:Colocar palavras chave
